# TradingBotCryptoAI

./: .gitignore  README.md  prd.md  pyproject.toml  run.sh
ai_meme_bot/: .env.example  __init__.py  config.py  main.py  models.py
ai_meme_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_meme_bot/agent/: __init__.py  ai_service.py  hermes_bot.py  reflection.py  tools.py
ai_meme_bot/core/: __init__.py  database.py  execution.py  pnl_image.py  price_feed.py  tracker.py
tests/: helpers.py  test_ai_service.py  test_config.py  test_database_execution.py  test_notifications.py  test_price_feed.py  test_risk_gates.py  test_telegram.py  test_tracker.py
