[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-meme-bot"
version = "0.1.0"
description = "Provider-neutral paper trading bot for PumpSwap candidates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "python-telegram-bot>=20,<23",
    "websockets>=12",
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ai_meme_bot*"]
